fixed broken css files from bad merge

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -6,36 +6,26 @@
     display: block;
   }
 
-{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  width: 100%;
-  text-align: center;
-}
-
-&__title {
-  font-weight: 300;
-  color: $mainBlue;
-  font-size: 1.1rem;
-  margin: 0;
-
-  @mixin atSmall {
-    font-size: 2rem;
+  &__text-content {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    width: 100%;
+    text-align: center;
   }
 
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.4rem;
+    font-size: 1.1rem;
     margin: 0;
 
     @mixin atSmall {
-      font-size: 4.8rem;
+      font-size: 2rem;
     }
   }
-
+  
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
@@ -46,7 +36,6 @@
       font-size: 2.9rem;
     }
   }
-}
 
   &__description {
     color: #fff;
@@ -61,15 +50,4 @@
       font-size: 1.875rem;
     }
   }
-}
-
-&__description {
-  color: #fff;
-  font-size: 1.875rem;
-  font-weight: 100;
-  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
-  max-width: 30rem;
-  margin-left: auto;
-  margin-right: auto;
-}
 }
